--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,3 +1,3 @@
-<p>
-  user works!
-</p>
+<li *ngFor="let user of users">
+  {{ user.name }} - <a href="mailto:{{user.email}}">{{user.email}}</a>
+</li>
